not going through walls anymore

--- a/p3dx_2dnav/yamls/global_planner_params.yaml
+++ b/p3dx_2dnav/yamls/global_planner_params.yaml
@@ -1,5 +1,5 @@
 GlobalPlanner:
-  cycles: 10000 # 7500 # 6500 # 5545 # 6755 # -1 #
+  cycles: 15000 # 7500 # 6500 # 5545 # 6755 # -1 #
   intervalToPubPath: 1 # specifies the frequency at which the planner should publish the path it is currently evaluating
   # Parameters for the Robot
   acc_lim_theta: 60 # TODO (amal): The global planner was 2.0 radians which is way more than 60 degrees -- change the local planner to match this!!
@@ -11,7 +11,7 @@ GlobalPlanner:
   # Parameters for the Grid
   numDiscretizations: 3
   rotationCost: 0.1
-  obsCost: 0.05
+  obsCost: 0.05 #0.05
   heuristicRange: 5
   heuristicRangeMultiplier: 100
   heuristicRangeRequiredForSuccess: 80
@@ -45,28 +45,25 @@ GlobalPlanner:
   # movementCost: 0.2 # 1/cm
 
   # Example of the params one would have to change to use mm instead of cm
-  min_arm_length: 140 # mm
-  average_arm_length: 270 # mm
-  max_arm_length: 540 # mm
-  handle_length: 430 # mm
+  handle_length: 629 # mm
   acc_lim_x: 500 # mm/s^2
   max_vel_x: 600 # mm/s
   min_vel_x: 100 # mm/s
-  sim_granularity: 30 # mm
+  sim_granularity: 10 # mm
   multiplicativeFactor: 1000 # units
   # x (mm), y (mm), theta (degree), v (mm/s), w (degree/s), vSamples (number), wSamples (number)
   gridSize0: [180, 180, 45, 10, 1, 6, 5]
   gridSize1: [60, 60, 15, 10, 1, 8, 5]
   gridSize2: [20, 20, 5, 10, 1, 10, 5]
-  distanceThresholds: [1250, 500]
+  distanceThresholds: [2000, 500]
   gridOrigin: [0, 0, -22, -5, 0, 0, 0]
   movementCost: 0.02 # 1/mm
   # Params for the coupling model
-  handleLengthForCouplingModel: 168 # mm
-  regionOffset: 505 # mm
-  regionSize: 227 # mm
-  regionAngle: 57 # degrees
-  alpha: 0.833333 # weight in [0.0, 1.0]
-  beta: 0.713992 # weight in [0.0, 1.0]
+  handleLengthForCouplingModel: 171 # mm
+  regionOffset: 507 # mm
+  regionSize: 241 # mm
+  regionAngle: 40 # degrees
+  alpha: 0.676452 # weight in [0.0, 1.0]
+  beta: 0.854187 # weight in [0.0, 1.0]
   distanceEqualityThreshold: 5.0 # mm
   orientationEqualityThreshold: 0.05 # degrees
