--- a/p3dx_2dnav/yamls/costmap_common_params.yaml
+++ b/p3dx_2dnav/yamls/costmap_common_params.yaml
@@ -1,14 +1,16 @@
 obstacle_range: 10
 raytrace_range: 5.0
 footprint: [[0.26, 0.0], [0.26, 0.165], [0.0, 0.165], [-0.2485, 0.165], [-0.2485, 0.0], [-0.2485, -0.165], [0.0, -0.165], [0.26, -0.165]]
-#robot_radius: ir_of_robot
-inflation_radius: 0.4
+#footprint: [[0.22, 0.28], [-0.24, 0.28], [-0.24, 0.04], [-0.90, 0.04], [-0.90, -0.04], [-0.24, -0.04], [-0.24, -0.28], [0.22, -0.28]]
+#robot_radius: 0.32 #
+inflation:
+  inflation_radius: 0.0000001 #0.4
+  cost_scaling_factor: 10.0
 observation_sources: laser_scan_sensor
 laser_scan_sensor: {
-      sensor_frame: lms100, 
-      data_type: LaserScan, 
-      topic: /p3dx/laser/scan, 
-      expected_update_rate: 0.1, 
-      marking: true, 
+      sensor_frame: lms100,
+      data_type: LaserScan,
+      topic: /p3dx/laser/scan,
+      expected_update_rate: 0.1,
+      marking: true,
       clearing: true}
-
